deploy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 8080
    name: https
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: websiteapp
    tier: website
    service: website
    color: green

---

apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: NodePort
  ports:
  - port: 27017
    targetPort: 5432
  selector:
    app: websiteapp
    tier: database
    service: database
    color: blue
