deploy.local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      type: website
      service: website
      color: green
  minReadySeconds: 1
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: website
        service: website
        color: green
        language: csharp
    spec:
      imagePullSecrets:
      - name: repo
      containers:
      - name: website
        image: majunga.azurecr.io/website:1
        ports:
        - containerPort: 80
          name: website
---

apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    type: website
    service: website
    color: green
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      type: mongodb
      service: mongodb
      color: blue
  minReadySeconds: 1
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: mongodb
        service: mongodb
        color: blue
    spec:
      imagePullSecrets:
      - name: repo
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
      

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: NodePort
  ports:
  - port: 27017  
  selector:
    type: mongodb
    service: mongodb
    color: blue

---
