deploy.template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websiteapp
      tier: website
      service: website
      color: green
  minReadySeconds: 1
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: websiteapp
        tier: website
        service: website
        color: green
        language: csharp
    spec:      
      imagePullSecrets:
        - name: repo
      containers:
      - name: website
        image: #{image}#
        ports:
        - containerPort: 80
          name: http
---

apiVersion: v1
kind: Service
metadata:
  name: website
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "majunga-cert"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "majunga.co.uk"
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: http
    name: https
  - port: 80
    targetPort: http
    name: http
  selector:
    app: websiteapp
    tier: website
    service: website
    color: green

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websiteapp
      tier: database
      service: database
      color: blue
  template:
    metadata:
      labels:
        app: websiteapp
        tier: database
        service: database
        color: blue
    spec:
      containers:
        - name: database
          image: postgres:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database-pv-claim
---

apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: NodePort
  ports:
  - port: 27017
    targetPort: 5432
  selector:
    app: websiteapp
    tier: database
    service: database
    color: blue

---
