deploy.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      type: website
      service: website
      color: green
  minReadySeconds: 1
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: website
        service: website
        color: green
        language: csharp
    spec:      
      imagePullSecrets:
        - name: repo
      volumes:
      - name: sqlitevolume
        persistentVolumeClaim:
          claimName: sqlitevolume
      containers:
      - name: website
        image: #{image}#
        ports:
        - containerPort: 8080
          name: website
        volumeMounts:
        - mountPath: "src/Majunga/Server/Website.db"
          name: sqlitevolume

---

apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    type: website
    service: website
    color: green

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      type: mongodb
      service: mongodb
      color: blue
  minReadySeconds: 1
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: mongodb
        service: mongodb
        color: blue
    spec:
      imagePullSecrets:
      - name: repo
      volumes:
      - name: mongovolume
        persistentVolumeClaim:
          claimName: mongovolume
      containers:
      - name: mongodb
        volumeMounts:
        - name: mongovolume
          mountPath: /data/db
        image: mongo:latest
        ports:
        - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: LoadBalancer
  ports:
  - port: 27017  
  selector:
    type: mongodb
    service: mongodb
    color: blue

---
