deploy-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: majunga.co.uk
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 80
